# serializer version: 1
# name: test_state[switch.pyload_auto_reconnect-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.pyload_auto_reconnect',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Auto-Reconnect',
    'platform': 'pyload',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': <PyLoadSwitch.RECONNECT: 'reconnect'>,
    'unique_id': 'XXXXXXXXXXXXXX_reconnect',
    'unit_of_measurement': None,
  })
# ---
# name: test_state[switch.pyload_auto_reconnect-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'switch',
      'friendly_name': 'pyLoad Auto-Reconnect',
    }),
    'context': <ANY>,
    'entity_id': 'switch.pyload_auto_reconnect',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_state[switch.pyload_pause_resume_queue-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.pyload_pause_resume_queue',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Pause/Resume queue',
    'platform': 'pyload',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': <PyLoadSwitch.PAUSE_RESUME_QUEUE: 'download'>,
    'unique_id': 'XXXXXXXXXXXXXX_download',
    'unit_of_measurement': None,
  })
# ---
# name: test_state[switch.pyload_pause_resume_queue-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'switch',
      'friendly_name': 'pyLoad Pause/Resume queue',
    }),
    'context': <ANY>,
    'entity_id': 'switch.pyload_pause_resume_queue',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
